텔레그램 메시지 전송 코드 추가

--- a/Start Camp/day3/115 금 수업내용.md
+++ b/Start Camp/day3/115 금 수업내용.md
@@ -33,3 +33,6 @@
 * `commit` 커밋(creeate a snapshot) 만들기
 * `pust` 현재까지의 역사 (commits) 가 기록되어 있는 곳에 새로 생성한 커밋들 반영하기
 
+* 다른 기기에서 다시 git 파일을 불러오려면 해당 git code를 다운로드 하고 나서 git clone URL 까지 해주어야 git에서 관리할 수 있게 설정됨
+* 그 다음 최신화된 정보를 받아오려면 pull명령어를 써야함
+* pull - git pull origin master 로 당겨오면 됨
